[Fixed MIFOS: 4034, 4199] - layout issues

--- a/userInterface/src/main/webapp/pages/css/main.css
+++ b/userInterface/src/main/webapp/pages/css/main.css
@@ -454,3 +454,7 @@ input[type="checkbox"], input.checkbox {
 .black {
     color: #000;
 }
+
+.relative {
+    position:relative;
+}
